@@ -5,6 +5,8 @@ ImportFileDialog.tableColumn=Table column
 ImportFileDialog.importFileColumn=Import file column
 ImportFileDialog.fixedValue=Fixed value
 ImportFileDialog.column=Column
+ImportFileDialog.suggestColumns=Suggest columns (find matching columns)
+ImportFileDialog.suggestColumnsIgnoreCase=ignore case
 
 PreferencesPanel.truncateTable=Truncate table before inserting data
 
